# simple-calculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  ci-cd.yml  linter-test.yml  publish.yml  tag-release.yml
simple_calculator/: __init__.py  core.py
simple_calculator_exl/: image_carousel.py  image_carousel2.py
simple_calculator_exl/fastapi-text-to-sql/: example.py
simple_calculator_exl/google-adk-tutorial/: .env  agent.py
simple_calculator_exl/simple-mcp-example/: math_client.py  math_server.py
simple_calculator_exl/workflow-example/: __init__.py  req.txt  sample-questions.txt  test.py  workflow.py
tests/: test_core.py
